* Added parameters "showCountValues" and "showPercentageValues" to function "sjp.xtab", so either percentage value labels, count value labels or both can be printed.
* Removed parameters "maxYlim" and "upperYLim" from "sjp.grpfrq", "sjp.xtab" and "sjp.frq", and added "axisLimits.y" as new option to define y-axis-range.
* Parameter "labelPos" now also works for flipped coordinates in "sjp.xtab".

General:
* Console output of various function that used the "cat" or "print" command were replaced by "message" or "warning", if more appropriate.

Bug fixes:
* Parameter "geom.size" was not applied to bar charts in "sjp.grpfrq" - fixed.
* Q-Q plot of "sjp.lm.ma" used wrong linear q-q line - fixed.


Version 1.6
------------------------------------------------------------------------------
General:
* Comprehensive online manual available at http://www.strengejacke.de/sjPlot/
* Most geom-aesthetics and theme-options have been removed from all "sjp"-functions. This allows more flexibility in creating own themes or using other packages that modify theme appearance. Use the new function "sjp.setTheme" to globally change theme- and geom-aesthetics for sjp-functions, or use packages like "ggthemr" or "ggthemes" to tweak the plot appearance.
* Replaced "b" with beta-sign in model-summary for "sjp.lm" and "sjp.lm1".
* Renamed "sju.aov1.levene" to "sjs.aov1.levene".
* Documentation / help files have been revised and cleaned up.

New functions:
* New function "sjp.setTheme" to globally change theme- and geom-aesthetics for sjp-functions.
* New function "sjp.lmer" to plot random or fixed effects of linear mixed effects models.
* New function "sjp.glmer" to plot random or fixed effects of generalized linear mixed effects models.
* New function "sjt.grpmean" to print grouped means as HTML table.
* New function "sjs.etasq" to compute eta squared value for one-way-anovas.
* New function "sjs.se" to compute standard errors.

Changes to functions: