@@ -48,6 +48,8 @@ if(getRversion() >= "2.15.1") utils::globalVariables(c("nQQ", "ci", "fixef", "fa
 #' @param hideErrorBars If \code{TRUE}, the error bars that indicate the confidence intervals of the odds ratios are not
 #'          shown.
 #' @param showIntercept if \code{TRUE}, the intercept is included when plotting random or fixed effects.
+#' @param stringIntercept string of intercept estimate on the y axis. Only applies, if \code{showIntercept}
+#'          is \code{TRUE} and \code{pred.labels} is not \code{NULL}.
 #' @param sort.coef indicates which coefficient should be used for sorting odds ratios
 #'          \itemize{
 #'            \item If \code{NULL} (default), no sorting is done and odds ratios are sorted in order of model coefficients.
@@ -60,6 +62,10 @@ if(getRversion() >= "2.15.1") utils::globalVariables(c("nQQ", "ci", "fixef", "fa
 #' @param pred.labels a character vector with labels for the predictors / covariates / groups. Should either be vector
 #'          of fixed effects variable labels (if \code{type = "fe"}) or a vector of group (value)
 #'          labels from the random intercept's categories (if \code{type = "re"}).
+#' @param axisTitle.x A label (title) for the x axis. If not specified, a default labelling depending
+#'          on the plot type is chosen.
+#' @param axisTitle.y A label (title) for the y axis. If not specified, a default labelling depending
+#'          on the plot type is chosen.
 #' @param interceptLineType The linetype of the intercept line (zero point). Default is \code{2} (dashed line).
 #' @param interceptLineColor The color of the intercept line. Default value is \code{"grey70"}.
 #' @param facet.grid \code{TRUE} when each plot should be plotted separately instead of
@@ -75,7 +81,7 @@ if(getRversion() >= "2.15.1") utils::globalVariables(c("nQQ", "ci", "fixef", "fa
 #'            \item a data frame \code{mydf} with the data used to build the ggplot-object(s).
 #'            }
 #'
-#' @note Thanks to Robert Reijntjes from Leiden University Medical Center for sharing 
+#' @note Thanks to Robert Reijntjes from Leiden University Medical Center for sharing
 #'         R code that is used to compute fixed effects correlation matrices and
 #'         qq-plots of random effects.
 #'
@@ -117,39 +123,39 @@ if(getRversion() >= "2.15.1") utils::globalVariables(c("nQQ", "ci", "fixef", "fa
 #' fit <- glmer(hi_qol ~ sex + c12hour + neg_c_7 + (1|grp),
 #'              data = mydf,
 #'              family = binomial("logit"))
-#' 
+#'
 #' # plot random effects
 #' sjp.glmer(fit)
-#' 
+#'
 #' # plot fixed effects
 #' sjp.glmer(fit, type = "fe")
-#' 
+#'
 #' # plot and sort fixed effects
 #' sjp.glmer(fit,
 #'           type = "fe",
 #'           sort.coef = TRUE)
-#' 
+#'
 #' # plot fixed effects correlations
 #' sjp.glmer(fit, type = "fe.cor")
-#' 
+#'
 #' # qq-plot of random effects
 #' sjp.glmer(fit, type = "re.qq")
-#' 
+#'
 #' # plot probability curves for each covariate
 #' # grouped by random intercepts
-#' sjp.glmer(fit, 
-#'           type = "ri.pc", 
+#' sjp.glmer(fit,
+#'           type = "ri.pc",
 #'           show.se = TRUE)
-#' 
+#'
 #' # plot probability curves for each covariate
 #' # grouped by random intercepts in integrated plots
-#' sjp.glmer(fit, 
-#'           type = "ri.pc", 
+#' sjp.glmer(fit,
+#'           type = "ri.pc",
 #'           facet.grid = FALSE)
 #'
 #' # plot probability curve of fixed effects
 #' sjp.glmer(fit, type = "fe.pc")}
-#' 
+#'
 #' @import ggplot2
 #' @importFrom reshape2 melt
 #' @export
@@ -161,8 +167,11 @@ sjp.glmer <- function(fit,
                       geom.colors = "Set1",
                       hideErrorBars = FALSE,
                       showIntercept = TRUE,
+                      stringIntercept = "(Intercept)",
                       sort.coef = NULL,
                       pred.labels = NULL,
+                      axisTitle.x = NULL,
+                      axisTitle.y = NULL,
                       facet.grid = TRUE,
                       free.scale = FALSE,
                       interceptLineType = 2,
@@ -170,10 +179,10 @@ sjp.glmer <- function(fit,
                       fade.ns = FALSE,
                       show.se = FALSE,
                       printPlot = TRUE) {
-  
+
   if (type == "fe.prob") type <- "fe.pc"
   if (type == "ri.prob") type <- "ri.pc"
-  
+
   sjp.lme4(fit,
            type,
            ri.nr,
@@ -182,8 +191,11 @@ sjp.glmer <- function(fit,
            geom.colors,
            hideErrorBars,
            showIntercept,
+           stringIntercept,
            sort.coef,
            pred.labels,
+           axisTitle.x,
+           axisTitle.y,
            interceptLineType,
            interceptLineColor,
            facet.grid,
@@ -237,6 +249,8 @@ sjp.glmer <- function(fit,
 #' @param hideErrorBars If \code{TRUE}, the error bars that indicate the confidence intervals of the estimates are not
 #'          shown.
 #' @param showIntercept if \code{TRUE}, the intercept is included when plotting random or fixed effects.
+#' @param stringIntercept string of intercept estimate on the y axis. Only applies, if \code{showIntercept}
+#'          is \code{TRUE} and \code{pred.labels} is not \code{NULL}.
 #' @param sort.coef indicates which coefficient should be used for sorting estimates.
 #'          \itemize{
 #'            \item If \code{NULL} (default), no sorting is done and estimates are sorted in order of model coefficients.
@@ -249,6 +263,10 @@ sjp.glmer <- function(fit,
 #' @param pred.labels a character vector with labels for the predictors / covariates / groups. Should either be vector
 #'          of fixed effects variable labels (if \code{type = "fe"}) or a vector of group (value)
 #'          labels from the random intercept's categories (if \code{type = "re"}).
+#' @param axisTitle.x A label (title) for the x axis. If not specified, a default labelling depending
+#'          on the plot type is chosen.
+#' @param axisTitle.y A label (title) for the y axis. If not specified, a default labelling depending
+#'          on the plot type is chosen.
 #' @param interceptLineType The linetype of the intercept line (zero point). Default is \code{2} (dashed line).
 #' @param interceptLineColor The color of the intercept line. Default value is \code{"grey70"}.
 #' @param facet.grid \code{TRUE} when each plot should be plotted separately instead of
@@ -289,8 +307,8 @@ sjp.glmer <- function(fit,
 #' sjp.lmer(fit,
 #'          type = "fe",
 #'          sort.coef = TRUE)
-#'          
-#'          
+#'
+#'
 #' library(lme4)
 #' data(efc)
 #' # prepare group variable
@@ -305,21 +323,21 @@ sjp.glmer <- function(fit,
 #' # fit glmer
 #' fit <- lmer(neg_c_7 ~ sex + c12hour + barthel + (1|grp),
 #'             data = mydf)
-#' 
+#'
 #' # plot random effects
 #' sjp.lmer(fit)
-#' 
+#'
 #' # plot fixed effects
 #' sjp.lmer(fit, type = "fe")
-#' 
+#'
 # plot and sort fixed effects
 #' sjp.lmer(fit,
 #'          type = "fe",
 #'          sort.coef = TRUE)
-#' 
+#'
 #' # plot fixed effects correlations
 #' sjp.lmer(fit, type = "fe.cor")
-#' 
+#'
 #' # qq-plot of random effects
 #' sjp.lmer(fit, type = "re.qq")}
 #'
@@ -333,8 +351,11 @@ sjp.lmer <- function(fit,
                      geom.colors = "Set1",
                      hideErrorBars = FALSE,
                      showIntercept = TRUE,
+                     stringIntercept = "(Intercept)",
                      sort.coef = NULL,
                      pred.labels = NULL,
+                     axisTitle.x = NULL,
+                     axisTitle.y = NULL,
                      interceptLineType = 2,
                      interceptLineColor = "grey70",
                      facet.grid = TRUE,
@@ -349,8 +370,11 @@ sjp.lmer <- function(fit,
            geom.colors,
            hideErrorBars,
            showIntercept,
+           stringIntercept,
            sort.coef,
            pred.labels,
+           axisTitle.x,
+           axisTitle.y,
            interceptLineType,
            interceptLineColor,
            facet.grid,
@@ -369,8 +393,11 @@ sjp.lme4  <- function(fit,
                       geom.colors,
                       hideErrorBars,
                       showIntercept,
+                      stringIntercept,
                       sort.coef,
                       pred.labels,
+                      axisTitle.x = NULL,
+                      axisTitle.y = NULL,
                       interceptLineType,
                       interceptLineColor,
                       facet.grid,
@@ -411,7 +438,17 @@ sjp.lme4  <- function(fit,
     # ---------------------------------------
     # copy rownames as axis labels, if not set
     # ---------------------------------------
-    if (is.null(pred.labels)) pred.labels <- rownames(mydf.ef)
+    if (is.null(pred.labels)) {
+      # use rownames, if pred.labels not available
+      pred.labels <- rownames(mydf.ef)
+      # check if intercept should be removed?
+      if (!showIntercept) pred.labels <- pred.labels[-1]
+    }
+    else {
+      # check if intercept should be added, in case
+      # pred.labels are passed
+      if (showIntercept) pred.labels <- c(stringIntercept, pred.labels)
+    }
     # ---------------------------------------
     # show intercept?
     # ---------------------------------------
@@ -530,7 +567,14 @@ sjp.lme4  <- function(fit,
     # ---------------------------------------
     # copy rownames as axis labels, if not set
     # ---------------------------------------
-    if (is.null(pred.labels)) pred.labels <- rownames(mydf)
+    if (is.null(pred.labels)) {
+      pred.labels <- rownames(mydf)
+    }
+    else {
+      # check if intercept should be added, in case
+      # pred.labels are passed
+      if (showIntercept) pred.labels <- c(stringIntercept, pred.labels)
+    }
     # ---------------------------------------
     # sort data frame. init order
     # ---------------------------------------
@@ -656,18 +700,20 @@ sjp.lme4  <- function(fit,
     # ---------------------------------------
     # axis titles
     # ---------------------------------------
-    if (type == "fe")
-      y.axis.text <- "Fixed effects"
-    else if (type == "re")
-      y.axis.text <- "Random effects"
-    x.axis.text <- "Levels"
+    if (type == "fe") {
+      if (is.null(axisTitle.y)) axisTitle.y <- "Fixed effects"
+    }
+    else if (type == "re") {
+      if (is.null(axisTitle.y)) axisTitle.y <- "Random effects"
+    }
+    if (is.null(axisTitle.x)) axisTitle.x <- "Levels"
     # ---------------------------------------
     # add facet grid here, faceting by group
     # (level) of random intercept
     # ---------------------------------------
     if (facet.grid) {
       gp <- gp +
-        labs(x = x.axis.text, y = y.axis.text)
+        labs(x = axisTitle.x, y = axisTitle.y)
       # check if user wants free scale for each facet
       if (free.scale)
         gp  <- gp + facet_wrap( ~ grp, scales = "free_y")
@@ -676,7 +722,7 @@ sjp.lme4  <- function(fit,
     }
     else {
       gp <- gp +
-        labs(x = x.axis.text, y = y.axis.text, title = title)
+        labs(x = axisTitle.x, y = axisTitle.y, title = title)
     }
     return (gp)
   }
@@ -805,17 +851,20 @@ sjp.lme.feprobcurv <- function(fit,
       }
       # find coef-position
       coef.pos <- which(coef.names == fit.fac.name)
-      # calculate x-beta by multiplying original values with estimate of that term
-      mydf.vals$xbeta <- mydf.vals$value * (lme4::fixef(fit)[coef.pos])
-      # calculate probability (y) via cdf-function
-      mydf.vals$y <- odds.to.prob(lme4::fixef(fit)[1] + mydf.vals$xbeta)
-      # save predictor name
-      pred.name <- fit.term.names[i]
-      axisLabels.mp <- c(axisLabels.mp, pred.name)
-      # assign group
-      mydf.vals$grp <- pred.name
-      # add mydf to list
-      mydf.metricpred[[length(mydf.metricpred) + 1]] <- mydf.vals
+      # check if we have found the coefficient
+      if (length(coef.pos) > 0) {
+        # calculate x-beta by multiplying original values with estimate of that term
+        mydf.vals$xbeta <- mydf.vals$value * (lme4::fixef(fit)[coef.pos])
+        # calculate probability (y) via cdf-function
+        mydf.vals$y <- odds.to.prob(lme4::fixef(fit)[1] + mydf.vals$xbeta)
+        # save predictor name
+        pred.name <- fit.term.names[i]
+        axisLabels.mp <- c(axisLabels.mp, pred.name)
+        # assign group
+        mydf.vals$grp <- pred.name
+        # add mydf to list
+        mydf.metricpred[[length(mydf.metricpred) + 1]] <- mydf.vals
+      }
     }
   }
   # ---------------------------------------------------------
@@ -901,6 +950,8 @@ sjp.lme.reprobcurve <- function(fit,
   # retrieve term names, so we find the estimates in the
   # coefficients list
   # ----------------------------
+  plot.prob <- list()
+  mydf.prob <- list()
   fit.term.length <- length(names(lme4::fixef(fit))[-1])
   fit.term.names <- attr(attr(fit.df, "terms"), "term.labels")[1 : fit.term.length]
   response.name <- attr(attr(attr(fit.df, "terms"), "dataClasses"), "names")[1]
@@ -940,57 +991,65 @@ sjp.lme.reprobcurve <- function(fit,
       }
       # find coef-position
       coef.pos <- which(coef.names == fit.fac.name)
-      # calculate x-beta by multiplying original values with estimate of that term
-      mydf.vals$xbeta <- mydf.vals$value * (lme4::fixef(fit)[coef.pos])
-      # save predictor name
-      pred.name <- fit.term.names[i]
-      # do this for each random intercept group
-      for (j in 1 : nrow(rand.ef)) {
-        # calculate probability for each random effect group
-        mydf.vals$y <- odds.to.prob(rand.ef[j, 1] + mydf.vals$xbeta)
-        # add to final data frame
-        final.df <- rbind(final.df, cbind(pred = mydf.vals$value,
-                                          prob = mydf.vals$y))
-        # need to add grp vector later to data frame,
-        # else "x" and "prob" would be coerced to factors
-        final.grp <- c(final.grp,
-                       rep(row.names(rand.ef)[j],
-                           times = length(mydf.vals$value)))
-      }
-      # add grp vector
-      final.df$grp <- final.grp
-      # ---------------------------------------------------------
-      # plot
-      # ---------------------------------------------------------
-      mp <- ggplot(final.df, aes(x = pred, y = prob, colour = grp)) +
-        stat_smooth(method = "glm",
-                    family = "binomial",
-                    se = show.se) +
-        # cartesian coord still plots range of se, even
-        # when se exceeds plot range.
-        coord_cartesian(ylim = c(0, 1)) +
-        labs(x = NULL,
-             y = "Probability",
-             title = sprintf("Probability of %s on %s", pred.name, response.name))
-      # wrap to facets
-      if (facet.grid) {
-        mp <- mp + facet_wrap( ~ grp,
-                               ncol = round(sqrt(nrow(rand.ef))),
-                               scales = "free_x") +
-          # no legend
-          guides(colour = FALSE)
-      }
-      # -------------------------------------
-      # check if metric plots should be plotted
-      # -------------------------------------
-      if (printPlot) {
-        print(mp)
+      # check if we have found the coefficient
+      if (length(coef.pos) > 0) {
+        # calculate x-beta by multiplying original values with estimate of that term
+        mydf.vals$xbeta <- mydf.vals$value * (lme4::fixef(fit)[coef.pos])
+        # save predictor name
+        pred.name <- fit.term.names[i]
+        # do this for each random intercept group
+        for (j in 1 : nrow(rand.ef)) {
+          # calculate probability for each random effect group
+          mydf.vals$y <- odds.to.prob(rand.ef[j, 1] + mydf.vals$xbeta)
+          # add to final data frame
+          final.df <- rbind(final.df, cbind(pred = mydf.vals$value,
+                                            prob = mydf.vals$y))
+          # need to add grp vector later to data frame,
+          # else "x" and "prob" would be coerced to factors
+          final.grp <- c(final.grp,
+                         rep(row.names(rand.ef)[j],
+                             times = length(mydf.vals$value)))
+        }
+        # add grp vector
+        final.df$grp <- final.grp
+        # ---------------------------------------------------------
+        # plot
+        # ---------------------------------------------------------
+        mp <- ggplot(final.df, aes(x = pred, y = prob, colour = grp)) +
+          stat_smooth(method = "glm",
+                      family = "binomial",
+                      se = show.se) +
+          # cartesian coord still plots range of se, even
+          # when se exceeds plot range.
+          coord_cartesian(ylim = c(0, 1)) +
+          labs(x = NULL,
+               y = "Probability",
+               title = sprintf("Probability of %s on %s", pred.name, response.name))
+        # wrap to facets
+        if (facet.grid) {
+          mp <- mp + facet_wrap( ~ grp,
+                                 ncol = round(sqrt(nrow(rand.ef))),
+                                 scales = "free_x") +
+            # no legend
+            guides(colour = FALSE)
+        }
+        # -------------------------------------
+        # add to plot and df list
+        # -------------------------------------
+        plot.prob[[length(plot.prob)+1]] <- mp
+        mydf.prob[[length(mydf.prob)+1]] <- final.df
+        # -------------------------------------
+        # check if metric plots should be plotted
+        # -------------------------------------
+        if (printPlot) {
+          print(mp)
+        }
       }
     }
   }
   invisible(structure(class = "sjpglmer.ripc",
-                      list(mydf = final.df,
-                           plot = mp)))
+                      list(mydf = mydf.prob,
+                           plot = plot.prob)))
 }
 
 
